pisp-demo-dep/ingress-tp-ttk.yaml
apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: tp-ttk
  annotations:
    kubernetes.io/ingress.class: kong
    # konghq.com/strip-path: "true"
    # This is required to rewrite paths to services that contain multiple endpoints, 
    # e.g. /participants and /parties are both on the account-lookup-service
    # konghq.com/plugins: tp-ttk-rewrite
spec:
  rules:
    - host: tp-ttk.beta.moja-lab.live
      http:
        paths:
          - path: /api
            backend:
              serviceName: tp-ttk-ml-testing-toolkit-backend
              servicePort: 5050 
          - path: /
            backend:
              serviceName: tp-ttk-ml-testing-toolkit-frontend
              servicePort: 6060
          - path: /socket.io/
            backend:
              serviceName: tp-ttk-ml-testing-toolkit-backend
              servicePort: 5050

    - host: tp-ttk-backend-1.beta.moja-lab.live
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: tp-ttk-ml-testing-toolkit-backend
              servicePort: 5000
